# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml
caddy/: Caddyfile
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  __main__.py  observability.py  server.py  tools.py
nanobot/: Dockerfile  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
scripts/: qwen-auth.py
