[project]
name = "nanobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "nanobot-ai",
    "mcp-lms",
    "mcp-obs",
    "nanobot-webchat",
    "mcp-webchat",
    "openai>=2.30.0",
]

[tool.uv.sources]
nanobot-ai = { url = "https://github.com/HKUDS/nanobot/archive/e7d371ec1e6531b28898ec2c869ef338e8dd46ec.zip" }
mcp-lms = { workspace = true }
mcp-obs = { workspace = true }
nanobot-webchat = { workspace = true }
mcp-webchat = { workspace = true }
